@@ -16,6 +16,7 @@
 
 
 xflr5 v6.33
+	- corrected the calculation of the downwash and induced angle for the VLM method. Was twice what it should be. No impact on other results.
 	- corrected the calculation of the damping ratio; was formerly lambda.real()/omega_damped instead of lambda.real()/omega_natural
 	- reorganized the library structure; the XFoil library is now limited to the XFoil class
 	- bug corrections and minor enhancements
